Update project to IVE Network

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Haerin Fan Network</title>
+    <title>IVE Fan Network</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,13 +12,13 @@
 <body>
     <div class="container">
         <header>
-            <h1 class="title">HAERIN <span>NETWORK</span></h1>
-            <div class="subtitle">Free, unlimited, original quality upload. NewJeans Haerin photo sharing web page</div>
+            <h1 class="title">IVE <span>NETWORK</span></h1>
+            <div class="subtitle">Free, unlimited, original quality upload. IVE photo sharing web page</div>
         </header>
 
         <main>
             <div class="upload-section">
-                <h2>Upload Haerin photo publicly</h2>
+                <h2>Upload IVE photo publicly</h2>
                 <form id="upload-form" enctype="multipart/form-data">
                     <div class="form-group">
                         <input type="text" id="photo-title" placeholder="Photo title" required>
@@ -45,19 +45,19 @@
             </div>
 
             <div class="links">
-                <a href="https://www.instagram.com/newjeans_official/" class="link-card" target="_blank">
+                <a href="https://www.instagram.com/ive_official/" class="link-card" target="_blank">
                     <span class="link-title">Instagram</span>
                     <span class="link-icon">→</span>
                 </a>
-                <a href="https://twitter.com/NewJeans_ADOR" class="link-card" target="_blank">
+                <a href="https://twitter.com/IVE_twt" class="link-card" target="_blank">
                     <span class="link-title">Twitter</span>
                     <span class="link-icon">→</span>
                 </a>
-                <a href="https://newjeans.kr/" class="link-card" target="_blank">
+                <a href="https://ivestarship.com/" class="link-card" target="_blank">
                     <span class="link-title">Official Website</span>
                     <span class="link-icon">→</span>
                 </a>
-                <a href="https://weverse.io/newjeans/feed" class="link-card" target="_blank">
+                <a href="https://weverse.io/ive/feed" class="link-card" target="_blank">
                     <span class="link-title">Weverse</span>
                     <span class="link-icon">→</span>
                 </a>
@@ -65,7 +65,7 @@
         </main>
 
         <footer>
-            <p>© 2023 Haerin Fan Network</p>
+            <p>© 2023 IVE Fan Network</p>
             <p>This is a fan-made website</p>
         </footer>
     </div>
